fix: add .dockerignore to frontend for Docker build optimization
- Remove .dockerignore from .gitignore to allow tracking it in git
- Add .dockerignore to frontend/ to exclude unnecessary files from Docker build context
- This fixes npm ci failing during Docker build by reducing context size
- Excludes node_modules, dist, design, docs, and other unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -118,9 +118,7 @@ Desktop.ini
 # -----------------------------------------------------------------------------
 # Docker
 # -----------------------------------------------------------------------------
-.dockerignore
-
-# Не игнорируем Dockerfile и docker-compose.yml
+# Не игнорируем .dockerignore, Dockerfile и docker-compose.yml
 # docker-compose.override.yml  # Можно игнорировать для локальных настроек
 
 # -----------------------------------------------------------------------------
