--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,6 +15,17 @@ server {
     # React Router support
     location / {
         try_files $uri $uri/ /index.html;
+        # НЕ кэшировать index.html - это критично для Telegram WebApp!
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
+    # HTML files не кэшируем (для получения актуальных бандлов)
+    location ~* \.html$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
     # API proxy (опционально, если frontend и backend на одном домене)
@@ -40,9 +51,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # Cache static assets с хешами (от Vite build) - можно кэшировать агрессивно
+    # Файлы с хешами в имени: index.[hash].js, main.[hash].css
+    location ~* \.[0-9a-f]{8,}\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+
+    # Остальные статические файлы (БЕЗ хешей) - короткое кэширование
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        expires 1h;
+        add_header Cache-Control "public, max-age=3600";
     }
 }
