fix: nginx regex syntax для cache busting

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -53,7 +53,8 @@ server {
 
     # Cache static assets с хешами (от Vite build) - можно кэшировать агрессивно
     # Файлы с хешами в имени: index.[hash].js, main.[hash].css
-    location ~* \.[0-9a-f]{8,}\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Regex: любой файл содержащий . и минимум 8 hex символов перед расширением
+    location ~* \.[0-9a-f]{8,32}\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
