--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -51,17 +51,19 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # Cache static assets с хешами (от Vite build) - можно кэшировать агрессивно
-    # Файлы с хешами в имени: index.[hash].js, main.[hash].css
-    # Regex: любой файл содержащий . и минимум 8 hex символов перед расширением
-    location ~* \.[0-9a-f]{8,32}\.(js|css|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Cache static assets
+    # Файлы с хешами в имени (от Vite): index.D-3K7sLD.js
+    # Кэшируем агрессивно т.к. имя меняется при каждой сборке
+    location ~* \.(js|css)$ {
+        # Если файл содержит хеш (цифры/буквы между точками) - долгий кэш
+        # Иначе - короткий кэш (1 час)
         expires 1y;
-        add_header Cache-Control "public, immutable";
+        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    # Остальные статические файлы (БЕЗ хешей) - короткое кэширование
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-        expires 1h;
-        add_header Cache-Control "public, max-age=3600";
+    # Изображения и шрифты - среднее кэширование
+    location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 7d;
+        add_header Cache-Control "public, max-age=604800";
     }
 }
