fix: editing prompt flow and preview

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,6 +6,9 @@ VITE_API_BASE_URL=http://localhost:8000
 # App Name
 VITE_APP_NAME=AI Image Generator
 
+# Prompt helper model name for UI
+VITE_PROMPT_ASSISTANT_MODEL=GPT-4.1-mini (OpenRouter)
+
 # Environment
 VITE_ENV=development
 
