--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,6 +37,7 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=60
 OPENROUTER_API_KEY=your-openrouter-api-key-here
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_MODEL=anthropic/claude-3-haiku-20240307
+OPENROUTER_PROMPT_MODEL=openai/gpt-4.1-mini
 
 # ЮKassa
 YUKASSA_SHOP_ID=your-yukassa-shop-id
