--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ greenlet==3.0.3  # для async SQLAlchemy
 # Pydantic для валидации
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0.post1
 
 # JWT и безопасность
 python-jose[cryptography]==3.3.0
