Update OpenRouter model references and local changes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,7 +37,7 @@ JWT_SECRET_KEY=your-jwt-secret-key-here
 JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=60
 
-# OpenRouter API (Claude Haiku)
+# OpenRouter API (GPT-4.1 Mini)
 OPENROUTER_API_KEY=your-openrouter-api-key-here
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_MODEL=anthropic/claude-3-haiku-20240307
