--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ REDIS_URL=redis://localhost:6379/0  # В Docker: redis://redis:6379/0
 # External APIs
 # -----------------------------------------------------------------------------
 
-# OpenRouter API (Claude Haiku / Gemini image for fitting/editing)
+# OpenRouter API (GPT-4.1 Mini / Gemini image for fitting/editing)
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_MODEL=anthropic/claude-3-haiku-20240307
