Add fallback settings toggles and VK auth improvements

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -31,11 +31,19 @@ COPY . .
 ARG VITE_API_BASE_URL
 ARG VITE_APP_NAME="AI Image Generator"
 ARG VITE_ENV=production
+ARG VITE_GOOGLE_CLIENT_ID
+ARG VITE_VK_APP_ID
+ARG VITE_VK_REDIRECT_URI
+ARG VITE_VK_AUTH_URL="https://id.vk.com/authorize"
 
 # Установка переменных окружения для build
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 ENV VITE_APP_NAME=$VITE_APP_NAME
 ENV VITE_ENV=$VITE_ENV
+ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
+ENV VITE_VK_APP_ID=$VITE_VK_APP_ID
+ENV VITE_VK_REDIRECT_URI=$VITE_VK_REDIRECT_URI
+ENV VITE_VK_AUTH_URL=$VITE_VK_AUTH_URL
 
 # Build приложения (Vite)
 RUN npm run build
