--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -165,6 +165,10 @@ services:
       dockerfile: Dockerfile.prod
       args:
         - VITE_API_BASE_URL=${VITE_API_BASE_URL}
+        - VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+        - VITE_VK_APP_ID=${VITE_VK_APP_ID}
+        - VITE_VK_REDIRECT_URI=${VITE_VK_REDIRECT_URI}
+        - VITE_VK_AUTH_URL=${VITE_VK_AUTH_URL:-https://id.vk.com/authorize}
         - VITE_ENV=production
     container_name: ai_image_bot_frontend_prod
     restart: always
