--- a/backend/.env.example
+++ b/backend/.env.example
@@ -99,12 +99,12 @@ REGISTER_RATE_LIMIT_PER_MINUTE=10
 
 # Email Verification
 EMAIL_VERIFICATION_ENABLED=true
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-specific-password
-SMTP_USE_TLS=true
-EMAIL_FROM=your-email@gmail.com
+SMTP_HOST=smtp.beget.com
+SMTP_PORT=465
+SMTP_USER=ai-generator@mix4.ru
+SMTP_PASSWORD=<SET_SMTP_PASSWORD_FOR_ai-generator@mix4.ru>
+SMTP_USE_TLS=false
+EMAIL_FROM=ai-generator@mix4.ru
 EMAIL_FROM_NAME=AI Image Generator
 EMAIL_VERIFICATION_TOKEN_TTL_MIN=30
 EMAIL_VERIFICATION_RESEND_LIMIT=3
