chore: clean up billing v4 remnants

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -60,8 +60,8 @@ YUKASSA_WEBHOOK_SECRET=your-webhook-secret
 # Установите в true для эмуляции платежей без реального ЮKassa
 PAYMENT_MOCK_MODE=false
 
-# Монетизация (Billing v4)
-BILLING_V4_ENABLED=false
+# Монетизация (Billing v5)
+BILLING_V5_ENABLED=true
 BILLING_GENERATION_COST_CREDITS=2
 BILLING_ASSISTANT_COST_CREDITS=1
 BILLING_FREEMIUM_OPS_LIMIT=5
