Provider fallback controls, 180s kie.ai timeout, referral bonus

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -46,9 +46,11 @@ OPENROUTER_PROMPT_MODEL=openai/gpt-4.1-mini
 
 # kie.ai Nano Banana API (Primary AI image generation service)
 USE_KIE_AI=true
+GENERATION_PRIMARY_PROVIDER=kie_ai
+GENERATION_FALLBACK_PROVIDER=openrouter
 KIE_AI_API_KEY=your-kie-ai-api-key-here
 KIE_AI_BASE_URL=https://api.kie.ai/v1
-KIE_AI_TIMEOUT=90
+KIE_AI_TIMEOUT=180
 KIE_AI_POLL_INTERVAL=5
 
 # ЮKassa
