--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@telegram-apps/sdk-react": "^1.1.3",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
