Update pricing and rebrand to AI Generator

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ ENVIRONMENT=development
 
 # FastAPI
 API_V1_PREFIX=/api/v1
-PROJECT_NAME=AI Image Generator
+PROJECT_NAME=AI Generator
 DEBUG=True
 SECRET_KEY=your-secret-key-here-change-in-production
 FRONTEND_URL=http://localhost:5173
@@ -68,13 +68,13 @@ BILLING_GENERATION_COST_CREDITS=2
 BILLING_ASSISTANT_COST_CREDITS=1
 BILLING_FREEMIUM_OPS_LIMIT=5
 BILLING_FREE_TRIAL_CREDITS=10
-BILLING_SUBSCRIPTION_TIERS='{"basic":{"price":299,"ops_limit":80},"standard":{"price":499,"ops_limit":130},"pro":{"price":499,"ops_limit":130},"premium":{"price":899,"ops_limit":250}}'
+BILLING_SUBSCRIPTION_TIERS='{"basic":{"price":369,"ops_limit":80},"standard":{"price":599,"ops_limit":130},"pro":{"price":599,"ops_limit":130},"premium":{"price":1099,"ops_limit":250}}'
 BILLING_CREDIT_PACKAGES='{"small":{"price":100,"credits":20},"medium":{"price":230,"credits":50},"large":{"price":400,"credits":100},"pro":{"price":900,"credits":250}}'
 BILLING_LEDGER_ENABLED=true
 BILLING_MUTEX_TIMEOUT_MS=2000
 YOOKASSA_IDEMPOTENCY_HEADER=Idempotence-Key
 FREEMIUM_ACTIONS_PER_MONTH=10
-FREEMIUM_WATERMARK_TEXT="AI Image Generator"
+FREEMIUM_WATERMARK_TEXT="AI Generator"
 
 # Налоги и комиссии
 NPD_TAX_RATE=0.04
@@ -107,7 +107,7 @@ SMTP_USER=ai-generator@mix4.ru
 SMTP_PASSWORD=<SET_SMTP_PASSWORD_FOR_ai-generator@mix4.ru>
 SMTP_USE_TLS=false
 EMAIL_FROM=ai-generator@mix4.ru
-EMAIL_FROM_NAME=AI Image Generator
+EMAIL_FROM_NAME=AI Generator
 EMAIL_VERIFICATION_TOKEN_TTL_MIN=30
 EMAIL_VERIFICATION_RESEND_LIMIT=3
 EMAIL_VERIFICATION_RESEND_PER_IP_PER_HOUR=10
