--- a/nginx/ai-image-bot.conf
+++ b/nginx/ai-image-bot.conf
@@ -1,4 +1,4 @@
-# Nginx конфигурация для AI Image Generator (Production на Beget VPS)
+# Nginx конфигурация для AI Generator (Production на Beget VPS)
 # Разместить в /etc/nginx/sites-available/ai-image-bot.conf
 # Создать симлинк: ln -s /etc/nginx/sites-available/ai-image-bot.conf /etc/nginx/sites-enabled/
 
