--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# AI Image Generator - Environment Configuration
+# AI Generator - Environment Configuration
 # =============================================================================
 # Скопируйте этот файл в .env и заполните все значения
 # НЕ коммитьте .env файл в Git!
@@ -16,7 +16,7 @@ DEBUG=True               # False для production
 # -----------------------------------------------------------------------------
 SECRET_KEY=your_random_secret_key_here_change_in_production
 API_V1_PREFIX=/api/v1
-PROJECT_NAME=AI Image Generator
+PROJECT_NAME=AI Generator
 BACKEND_URL=http://localhost:8000  # Публичный URL backend (для генерации абсолютных ссылок на /uploads). В production обязательно https://<домен>
 
 # -----------------------------------------------------------------------------
@@ -91,7 +91,7 @@ CHAT_HISTORY_RETENTION_DAYS=30     # Удаление старых чат-сес
 # Monetization Settings
 # -----------------------------------------------------------------------------
 FREEMIUM_ACTIONS_PER_MONTH=10
-FREEMIUM_WATERMARK_TEXT=AI Image Generator
+FREEMIUM_WATERMARK_TEXT=AI Generator
 
 # Налоги и комиссии
 NPD_TAX_RATE=0.04                  # НПД 4%
@@ -115,5 +115,5 @@ SENTRY_DSN=
 # Vite Frontend Variables (для docker-compose build args)
 # -----------------------------------------------------------------------------
 VITE_API_BASE_URL=http://localhost:8000  # В production: https://<домен>
-VITE_APP_NAME=AI Image Generator
+VITE_APP_NAME=AI Generator
 VITE_ENV=development
