--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,7 +4,7 @@
 VITE_API_BASE_URL=http://localhost:8000
 
 # App Name
-VITE_APP_NAME=AI Image Generator
+VITE_APP_NAME=AI Generator
 
 # Prompt helper model name for UI
 VITE_PROMPT_ASSISTANT_MODEL=GPT-4.1-mini (OpenRouter)
