--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,4 +1,4 @@
-# Frontend Dockerfile (Development) для AI Image Generator
+# Frontend Dockerfile (Development) для AI Generator
 
 FROM node:20-alpine
 
