--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -224,7 +224,7 @@ services:
       - backend
       - frontend
     volumes:
-      - ./nginx/modsecurity/waf.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/modsecurity/waf.conf:/etc/nginx/templates/conf.d/default.conf.template:ro
       - ./nginx/modsecurity/modsecurity.conf:/etc/modsecurity.d/modsecurity.conf:ro
       - waf_logs:/var/log/modsecurity
     networks:
