Fix referral stats and upload safeguards

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,6 +21,12 @@ server {
         add_header Expires "0";
     }
 
+    location = /favicon.ico {
+        try_files /favicon.ico /favicon.svg =204;
+        expires 7d;
+        add_header Cache-Control "public, max-age=604800";
+    }
+
     # HTML files не кэшируем (для получения актуальных бандлов)
     location ~* \.html$ {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
