feat: stars rename, webp uploads, password reset

--- a/.env.example
+++ b/.env.example
@@ -83,9 +83,24 @@ ADMIN_SECRET_KEY=your_admin_secret_key_here
 # -----------------------------------------------------------------------------
 UPLOAD_DIR=./uploads
 MAX_FILE_SIZE_MB=5
-ALLOWED_EXTENSIONS=jpg,jpeg,png
+MAX_VIDEO_FILE_SIZE_MB=200
+ALLOWED_EXTENSIONS=jpg,jpeg,png,webp,heic,heif,mpo
 PHOTO_RETENTION_HOURS=24           # Удаление фото примерки через 24 часа
 CHAT_HISTORY_RETENTION_DAYS=30     # Удаление старых чат-сессий через 30 дней
+
+# -----------------------------------------------------------------------------
+# Email / SMTP (верификация и сброс пароля)
+# -----------------------------------------------------------------------------
+EMAIL_VERIFICATION_ENABLED=true
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_USE_TLS=true
+EMAIL_FROM=
+EMAIL_FROM_NAME=AI Generator
+EMAIL_VERIFICATION_TOKEN_TTL_MIN=30
+PASSWORD_RESET_TOKEN_TTL_MIN=30
 
 # -----------------------------------------------------------------------------
 # Monetization Settings
